--- a/app/src/main/res/layout/activity_inventory_restaurant.xml
+++ b/app/src/main/res/layout/activity_inventory_restaurant.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.pointofsalesandroid.androidbasedpos_inventory.Inventory">
+    tools:context="com.pointofsalesandroid.androidbasedpos_inventory.Restaurant.InventoryRestaurant">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout"
