--- a/app/src/main/res/layout/activity_profile_management.xml
+++ b/app/src/main/res/layout/activity_profile_management.xml
@@ -74,26 +74,27 @@
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:text="Store Informations"
-                            android:textColor="@color/colorWhite"
+                            android:textColor="#ffffff"
                             />
 
                     </RelativeLayout>
+
                     <Button
                         android:id="@+id/button3"
-                        android:layout_marginBottom="8dp"
-                        android:layout_marginTop="20dp"
                         android:layout_width="wrap_content"
                         android:layout_height="40dp"
+                        android:layout_marginBottom="8dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginStart="8dp"
                         android:width="200dp"
+                        android:layout_marginTop="32dp"
                         android:background="@drawable/butoon_save"
-                        app:layout_constraintTop_toBottomOf="@+id/field_contact"
                         android:text="@string/btn_save_profile"
                         android:textColor="@color/colorWhite"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent" />
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/label_store_type" />
 
 
                     <android.support.design.widget.TextInputLayout
@@ -148,12 +149,46 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/field_address">
 
+
                         <android.support.design.widget.TextInputEditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@android:color/transparent"
                             android:drawableLeft="@drawable/ic_contancts" />
                     </android.support.design.widget.TextInputLayout>
+
+                    <TextView
+                        android:id="@+id/label_store_type"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="32dp"
+                        android:layout_marginTop="16dp"
+                        android:text="Store Type"
+                        android:textColor="@color/colorAccent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/field_contact" />
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_marginTop="8dp"
+                        app:layout_constraintTop_toBottomOf="@id/field_contact"
+                        app:layout_constraintLeft_toRightOf="@id/label_store_type"
+                        android:layout_marginLeft="24dp"
+                        android:src="@drawable/ic_restaurant"
+                        android:id="@+id/ic_restaurant"
+                        android:padding="5dp"
+                        />
+                    <ImageView
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:layout_marginTop="8dp"
+                            app:layout_constraintTop_toBottomOf="@id/field_contact"
+                            app:layout_constraintLeft_toRightOf="@id/ic_restaurant"
+                            android:layout_marginLeft="8dp"
+                            android:src="@drawable/ic_store"
+                            android:padding="5dp"
+                        />
+
                 </android.support.constraint.ConstraintLayout>
 
             </android.support.v7.widget.CardView>
