--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="icon">40dp</dimen>
     <dimen name="photoIcon">70dp</dimen>
-    <dimen name="bannerHeight">150dp</dimen>
+    <dimen name="bannerHeight">200dp</dimen>
     <dimen name="profileICon">100dp</dimen>
+    <dimen name="saveButtonHeight">40dp</dimen>
 </resources>
