added setiing banner image and business profile image

--- a/app/src/main/res/layout/activity_add_to_invetory_retail_store.xml
+++ b/app/src/main/res/layout/activity_add_to_invetory_retail_store.xml
@@ -10,10 +10,10 @@
         android:id="@+id/toolbar"
         app:title="@string/addItem"
         android:textAlignment="center"
-        app:titleTextColor="@color/colorAccent"
+        app:titleTextColor="@color/colorWhite"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
+        android:background="@color/colorAccent"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
