--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
         android:layout_marginTop="8dp"
         android:text="@string/app_name"
         android:textAllCaps="true"
-        android:textColor="@color/colorText"
+        android:textColor="@color/colorWhite"
         android:typeface="serif"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,7 +34,7 @@
         android:background="@drawable/buttonloginbg"
         android:text="POS"
         android:textAllCaps="false"
-        android:textColor="@color/colorText"
+        android:textColor="@color/colorWhite"
         android:textSize="30dp"
         app:layout_constraintBottom_toTopOf="@+id/logInFacebook"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,7 +52,7 @@
         android:background="@drawable/buttonloginbg"
         android:text="@string/logInGoolge"
         android:textAllCaps="false"
-        android:textColor="@color/colorText"
+        android:textColor="@color/colorWhite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,7 +70,7 @@
         android:layout_marginTop="8dp"
         android:textAllCaps="false"
         android:text="@string/logInFacebook"
-        android:textColor="@color/colorText"
+        android:textColor="@color/colorWhite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
