--- a/app/src/main/res/layout/activity_profile_management.xml
+++ b/app/src/main/res/layout/activity_profile_management.xml
@@ -6,27 +6,14 @@
     android:layout_height="match_parent"
     android:background="@color/slightGrey"
     tools:context="com.pointofsalesandroid.androidbasedpos_inventory.ProfileManagement">
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar3"
-        android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:background="?attr/colorAccent"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:title="@string/profileManagement"
-        app:titleTextColor="@color/colorWhite" />
 
     <ScrollView
-
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar3"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.49">
 
         <android.support.constraint.ConstraintLayout
@@ -36,7 +23,7 @@
 
             <ImageView
 
-                android:id="@+id/imageView"
+                android:id="@+id/storeBanner"
                 android:layout_width="0dp"
                 android:layout_height="@dimen/bannerHeight"
                 android:scaleType="center"
@@ -62,32 +49,34 @@
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="0dp"
-                    >
+                    android:layout_marginBottom="0dp">
+
                     <RelativeLayout
-                        android:layout_width="match_parent"
                         android:id="@+id/store_profile_label"
-                        android:background="@color/colorAccent"
-                        android:layout_height="50dp">
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:background="@color/colorAccent">
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:text="Store Informations"
+                            android:textAllCaps="true"
                             android:textColor="#ffffff"
-                            />
+                            android:textSize="20sp" />
 
                     </RelativeLayout>
 
                     <Button
-                        android:id="@+id/button3"
+                        android:id="@+id/submitInformation"
                         android:layout_width="wrap_content"
                         android:layout_height="40dp"
                         android:layout_marginBottom="8dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginStart="8dp"
-                        android:width="200dp"
                         android:layout_marginTop="32dp"
+                        android:width="200dp"
                         android:background="@drawable/butoon_save"
                         android:text="@string/btn_save_profile"
                         android:textColor="@color/colorWhite"
@@ -114,16 +103,16 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@android:color/transparent"
-                            android:drawableLeft="@drawable/ic_store"
-                            android:drawablePadding="5dp" />
+
+                            android:drawablePadding="10dp" />
                     </android.support.design.widget.TextInputLayout>
 
                     <android.support.design.widget.TextInputLayout
+                        android:id="@+id/field_address"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="16dp"
                         android:layout_marginStart="16dp"
-                        android:id="@+id/field_address"
                         android:layout_marginTop="8dp"
                         android:hint="@string/field_store_address"
                         app:layout_constraintHorizontal_bias="0.0"
@@ -134,15 +123,15 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@android:color/transparent"
-                            android:drawableLeft="@drawable/ic_store_address" />
+                            android:drawablePadding="10dp" />
                     </android.support.design.widget.TextInputLayout>
 
                     <android.support.design.widget.TextInputLayout
+                        android:id="@+id/field_contact"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="16dp"
                         android:layout_marginStart="16dp"
-                        android:id="@+id/field_contact"
                         android:layout_marginTop="8dp"
                         android:hint="@string/contact_hint"
                         app:layout_constraintHorizontal_bias="0.0"
@@ -154,7 +143,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@android:color/transparent"
-                            android:drawableLeft="@drawable/ic_contancts" />
+                            android:drawablePadding="10dp" />
                     </android.support.design.widget.TextInputLayout>
 
                     <TextView
@@ -167,27 +156,27 @@
                         android:textColor="@color/colorAccent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/field_contact" />
+
                     <ImageView
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:layout_marginTop="8dp"
-                        app:layout_constraintTop_toBottomOf="@id/field_contact"
-                        app:layout_constraintLeft_toRightOf="@id/label_store_type"
-                        android:layout_marginLeft="24dp"
-                        android:src="@drawable/ic_restaurant"
                         android:id="@+id/ic_restaurant"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginLeft="24dp"
+                        android:layout_marginTop="8dp"
                         android:padding="5dp"
-                        />
+                        android:src="@drawable/ic_restaurant"
+                        app:layout_constraintLeft_toRightOf="@id/label_store_type"
+                        app:layout_constraintTop_toBottomOf="@id/field_contact" />
+
                     <ImageView
-                            android:layout_width="50dp"
-                            android:layout_height="50dp"
-                            android:layout_marginTop="8dp"
-                            app:layout_constraintTop_toBottomOf="@id/field_contact"
-                            app:layout_constraintLeft_toRightOf="@id/ic_restaurant"
-                            android:layout_marginLeft="8dp"
-                            android:src="@drawable/ic_store"
-                            android:padding="5dp"
-                        />
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginTop="8dp"
+                        android:padding="5dp"
+                        android:src="@drawable/ic_store"
+                        app:layout_constraintLeft_toRightOf="@id/ic_restaurant"
+                        app:layout_constraintTop_toBottomOf="@id/field_contact" />
 
                 </android.support.constraint.ConstraintLayout>
 
@@ -202,14 +191,14 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:src="@drawable/store_profile"
-                app:civ_border_color="@color/colorIcon"
+                app:civ_border_color="@color/colorWhite"
                 app:civ_border_width="1dp"
                 app:civ_circle_background_color="@color/colorWhite"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/imageView"
-                app:layout_constraintVertical_bias="0.17000002" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.22000003" />
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
