--- a/app/src/main/res/layout/activity_profile_management.xml
+++ b/app/src/main/res/layout/activity_profile_management.xml
@@ -102,7 +102,7 @@
                         <android.support.design.widget.TextInputEditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:background="@android:color/transparent"
+                            android:backgroundTint="@color/colorAccent"
 
                             android:drawablePadding="10dp" />
                     </android.support.design.widget.TextInputLayout>
@@ -122,7 +122,7 @@
                         <android.support.design.widget.TextInputEditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:background="@android:color/transparent"
+                            android:backgroundTint="@color/colorAccent"
                             android:drawablePadding="10dp" />
                     </android.support.design.widget.TextInputLayout>
 
@@ -142,7 +142,7 @@
                         <android.support.design.widget.TextInputEditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:background="@android:color/transparent"
+                            android:backgroundTint="@color/colorAccent"
                             android:drawablePadding="10dp" />
                     </android.support.design.widget.TextInputLayout>
 
@@ -162,17 +162,18 @@
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:layout_marginLeft="24dp"
-                        android:layout_marginTop="8dp"
+                        android:layout_marginTop="16dp"
                         android:padding="5dp"
                         android:src="@drawable/ic_restaurant"
                         app:layout_constraintLeft_toRightOf="@id/label_store_type"
                         app:layout_constraintTop_toBottomOf="@id/field_contact" />
 
                     <ImageView
+                        android:id="@+id/ic_retailStore"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:layout_marginLeft="8dp"
-                        android:layout_marginTop="8dp"
+                        android:layout_marginTop="16dp"
                         android:padding="5dp"
                         android:src="@drawable/ic_store"
                         app:layout_constraintLeft_toRightOf="@id/ic_restaurant"
