--- a/app/src/main/res/layout/activity_inventory_restaurant.xml
+++ b/app/src/main/res/layout/activity_inventory_restaurant.xml
@@ -45,15 +45,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:clickable="true"
         android:focusable="true"
-        android:tint="@color/colorText"
+        android:tint="@color/colorWhite"
         app:backgroundTint="@color/colorAccent"
         app:fabSize="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@android:drawable/ic_input_add" />
-
-
 </android.support.constraint.ConstraintLayout>
