--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
    <!-- <color name="colorPrimary">#3498DB</color>-->
-    <color name="colorPrimaryDark">#3498DB</color>
-    <color name="colorAccent">#3498DB</color>
+    <color name="colorPrimaryDark">#F27C21</color>
+    <color name="colorAccent">#F9A11F</color>
     <color name="colorText">#303030</color>
     <color name="colorIcon">#616161</color>
     <color name="colorPrimary">#F5F5F5</color>
