--- a/app/src/main/res/layout/activity_inventory_restaurant.xml
+++ b/app/src/main/res/layout/activity_inventory_restaurant.xml
@@ -44,7 +44,7 @@
         app:layout_constraintTop_toBottomOf="@id/appBarLayout" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/itemListGrid"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
