added category filtering

--- a/app/src/main/res/layout/activity_inventory_restaurant.xml
+++ b/app/src/main/res/layout/activity_inventory_restaurant.xml
@@ -66,5 +66,6 @@
         app:fabSize="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_behavior="com.support.android.designlibdemo.ScrollAwareFABBehavior"
         app:srcCompat="@android:drawable/ic_input_add" />
 </android.support.constraint.ConstraintLayout>
