--- a/app/src/main/res/layout/resturant_item_grid.xml
+++ b/app/src/main/res/layout/resturant_item_grid.xml
@@ -26,7 +26,7 @@
                 android:id="@+id/imgBanner"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
-                android:tint="@color/colorWhite"
+                android:scaleType="centerCrop"
                 android:background="@color/colorAccent"
                 android:src="@drawable/ic_camera" />
 
@@ -64,7 +64,27 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imgBanner" />
 
+            <ImageView
+                android:id="@+id/ic_delete"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:src="@drawable/ic_delete_forever_white_48dp"
+                android:tint="@color/colorAccent"
+                app:layout_constraintStart_toEndOf="@+id/ic_edit"
+                app:layout_constraintTop_toBottomOf="@+id/label_itemCode" />
 
+            <ImageView
+                android:id="@+id/ic_edit"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:src="@drawable/ic_edit_white_48dp"
+                android:tint="@color/colorAccent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/label_itemCode" />
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
