fix some crash issues

--- a/app/src/main/res/layout/activity_update_product_actiivty.xml
+++ b/app/src/main/res/layout/activity_update_product_actiivty.xml
@@ -4,9 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/slightGrey"
-    tools:context="com.pointofsalesandroid.androidbasedpos_inventory.Restaurant.AddToInventoryRestuarant">
-
+    tools:context="com.pointofsalesandroid.androidbasedpos_inventory.Restaurant.UpdateProductActiivty">
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         app:title="@string/addItem"
@@ -215,6 +213,4 @@
         android:translationZ="3dp"
         android:id="@+id/prog"
         ></RelativeLayout>
-
-
 </android.support.constraint.ConstraintLayout>
