--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="colorWhite">#ffffff</color>
     <color name="slightGrey">#F5F5F5</color>
     <color name="colorTeal">#263238</color>
+    <color name="transparent">#00ffffff</color>
 </resources>
