--- a/app/src/main/res/layout/activity_update_product_actiivty.xml
+++ b/app/src/main/res/layout/activity_update_product_actiivty.xml
@@ -9,6 +9,7 @@
         android:id="@+id/toolbar"
         app:title="@string/addItem"
         android:textAlignment="center"
+        android:visibility="gone"
         app:titleTextColor="@color/colorWhite"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -37,7 +38,7 @@
             <ImageView
                 android:id="@+id/product_banner"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/bannerHeight"
+                android:layout_height="200dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_add_a_photo_black_24dp"
                 android:padding="150dp"
@@ -64,7 +65,6 @@
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/colorAccent"
                     android:drawablePadding="5dp"
-                    android:text="Item One"
                     android:id="@+id/fItemName"
                     android:textColor="@color/colorText" />
             </android.support.design.widget.TextInputLayout>
@@ -106,7 +106,7 @@
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/colorAccent"
                     android:drawablePadding="5dp"
-                    android:text="$ 24.00"
+                    android:inputType="numberDecimal"
                     android:textColor="@color/colorText"
                     android:id="@+id/fitemPrice"
                     />
@@ -159,7 +159,6 @@
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/colorAccent"
                     android:drawablePadding="5dp"
-                    android:text="47DF5DFS5D8D5"
                     android:textColor="@color/colorText"
                     android:id="@+id/fMenuCode"
 
@@ -170,20 +169,30 @@
             <android.support.v7.widget.AppCompatSpinner
                 android:id="@+id/dropDownCategory"
                 android:layout_width="150dp"
-                android:textAlignment="center"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="8dp"
-                android:layout_marginLeft="24dp"
-                android:layout_marginTop="8dp"
-                android:spinnerMode="dialog"
-                android:tooltipText="Category"
+                android:layout_marginTop="24dp"
+                android:background="@drawable/bottomline"
                 android:padding="8dp"
+                android:spinnerMode="dialog"
+                android:textAlignment="center"
+                android:tooltipText="Category"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:background="@drawable/bottomline"
                 app:layout_constraintTop_toBottomOf="@id/container_menu_code">
 
             </android.support.v7.widget.AppCompatSpinner>
+
+            <android.support.design.widget.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="8dp"
+                android:id="@+id/add_category"
+                android:tint="@android:color/white"
+                app:fabSize="mini"
+                app:layout_constraintLeft_toRightOf="@id/dropDownCategory"
+                app:layout_constraintTop_toBottomOf="@+id/container_item_price"
+                app:srcCompat="@android:drawable/ic_input_add" />
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
@@ -197,7 +206,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:visibility="invisible"
+        android:visibility="gone"
         android:translationZ="4dp"
         app:indicatorColor="@color/colorWhite"
         app:indicatorName="BallPulseIndicator"
@@ -209,7 +218,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorAccent"
-        android:visibility="invisible"
+        android:visibility="gone"
         android:translationZ="3dp"
         android:id="@+id/prog"
         ></RelativeLayout>
