--- a/app/src/main/res/layout/category_recycler_list.xml
+++ b/app/src/main/res/layout/category_recycler_list.xml
@@ -6,14 +6,14 @@
 
     <TextView
         android:id="@+id/itemCategory"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:text="CategoryItem"
         android:textColor="@color/colorAccent"
+        android:paddingLeft="32dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
