--- a/app/src/main/res/layout/dialog_edit_delete_category.xml
+++ b/app/src/main/res/layout/dialog_edit_delete_category.xml
@@ -37,10 +37,10 @@
         android:layout_height="40dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/butoon_save"
+        android:background="@android:color/transparent"
         android:text="delete"
         android:padding="5dp"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/colorAccent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/container_category" />
 
@@ -50,9 +50,9 @@
         android:layout_height="40dp"
         android:layout_marginEnd="24dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/butoon_save"
+        android:background="@android:color/transparent"
         android:text="save"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/colorAccent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/container_category" />
 </android.support.constraint.ConstraintLayout>
