--- a/app/src/main/res/layout/resturant_item_grid.xml
+++ b/app/src/main/res/layout/resturant_item_grid.xml
@@ -9,7 +9,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        app:cardElevation="10dp"
+        app:cardElevation="5dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -48,7 +48,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
-                android:text="Category"
+                android:text="UnCategorized"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/label_itemName" />
